Summary of important user-visible changes for signal 1.4.0:
----------------------------------------------------------

 ** The following new functions have been added to the signal package:

      peak2peak
      peak2rms
      rms
      udecode
      uencode

 ** Other functions that have been changed for smaller bugfixes,
    increased Matlab compatibility, or performance:

      impz square fracshift


Summary of important user-visible changes for signal 1.3.2:
----------------------------------------------------------

 ** The package is no longer dependent on the general package.

Summary of important user-visible changes for signal 1.3.1:
----------------------------------------------------------

 ** The following window functions now accept a Matlab compatible option
    to select the periodic variant, useful for FFT applications:

      blackmanharris    hann
      blackmannuttall   nuttallwin

 ** The following filter design functions have improved and more consistent
    input parameter validation:

      buttord    cheb2ord
      cheb1ord   ellipord

===============================================================================
signal-1.3.0   Release Date: 2014-01-26   Release Manager: Mike Miller
===============================================================================

 ** The following functions are new:

      digitrevorder   upsamplefill
      primitive       wconv
      ultrwin

 ** Several bugs have been fixed in the following functions:

      ellipord    ifwht
      findpeaks   remez
      fir1        resample
      fwht        schtrig
      grpdelay    zp2sos

 ** Replaced line continuation marker "\" by "..." to avoid deprecated syntax
    warning in Octave 3.8.

 ** The signal package now depends on Octave 3.8 or newer.  The `ellipke'
    function is required, which used to be provided by the specfun package.
    Consequently, the signal package no longer depends on specfun.
