@@ -6,8 +6,10 @@ Summary of important user-visible changes for signal 1.4.0:
       peak2peak
       peak2rms
       rms
+      shiftdata
       udecode
       uencode
+      unshiftdata
 
  ** Other functions that have been changed for smaller bugfixes,
     increased Matlab compatibility, or performance:
